@@ -1,4 +1,5 @@
 2006-08-15  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_WriteGedcom.py: support for AGE, CAUSE, and AGENCY
 	* src/GrampsDb/_ReadGedcom.py: support for AGE, CAUSE, and AGENCY
 	* src/GrampsDb/_GedTokens.py: support for AGE and AGENCY
 
